test/org/midica/testfiles/failing/oto-duplicate-option-q.midica
INCLUDE inc/instruments.midica

1: c (q=2)
1: (q=3) d
